# stg-test

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  index.php  mkinstalldirs  my_automake
doc/: Makefile.am  Makefile.in  STG_TEST
scripts/: Makefile.am  Makefile.in  README  regrep
src/: Makefile.am  Makefile.in
src/c/: 1.c  2.c  3.c  Makefile.am  Makefile.in
src/cc/: 3a.cc  3a.h  3a_main.cc  Makefile.am  Makefile.in  README  config.h  config.h.in
