SUBDIRS	= src bin scripts doc

## include my own little script for generating this stuff
EXTRA_DIST = my_automake

## add a hook to copy the doc files into the distribution durring 'make dist'
#dist-hook:
	#mkdir $(distdir)/doc
	#cp -p $(srcdir)/doc/* $(distdir)/doc
## cp -p $(srcdir)/doc/x $(srcdir)/doc/y $(distdir)/doc

## overide the standard install stuff
install: install-recursive
	echo "make install is not supported in this distribution"

install-recursive:
	echo "make install is not supported in this distribution"
