AC_INIT(src)
AM_INIT_AUTOMAKE(stgA,0.0.1)
AM_CONFIG_HEADER(src/cc/config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
echo "blah, blah, blah"
echo "this is a subliminal message...."
##AC_PROG_INSTALL
AC_OUTPUT(Makefile \
src/Makefile \
src/cc/Makefile \
src/c/Makefile \
bin/Makefile \
scripts/Makefile \
doc/Makefile)
echo ""
echo "--- Now run make, binaries will be in ./bin ---"
echo ""
